# VoiceChange

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/levylin/voicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MyLog.h  com_levylin_voicechange_EffectUtils.cpp  com_levylin_voicechange_EffectUtils.h  common_platform.cpp  play_sound.cpp
app/src/main/java/com/levylin/voicechange/: App.java  EffectUtils.java  MActivity.java  MainActivity.java  VoiceChangeActivity.java
app/src/main/res/layout/: act_m_activity.xml  act_voice_change.xml  activity_main.xml
app/src/test/java/com/levylin/voicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
